--- a/storefront/package.json
+++ b/storefront/package.json
@@ -36,6 +36,7 @@
     "algoliasearch": "^4.24.0",
     "axios": "^1.7.7",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.454.0",
     "medusajs-launch-utils": "^0.0.5",
     "next": "^14",
     "pg": "^8.13.1",
